--- a/SimpleWeather.UWP/Preferences/Settings_OSSLibs.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_OSSLibs.xaml
@@ -24,7 +24,7 @@
                 x:Key="CreditHyperlinkButtonStyle"
                 BasedOn="{StaticResource HyperlinkButtonStyle}"
                 TargetType="HyperlinkButton">
-                <Setter Property="Foreground" Value="{ThemeResource HyperlinkColor}" />
+                <Setter d:Value="Blue" Property="Foreground" Value="{ThemeResource HyperlinkColor}" />
                 <Setter Property="Padding" Value="0,8" />
                 <Setter Property="Margin" Value="-1" />
             </Style>
@@ -35,6 +35,36 @@
         <StackPanel Orientation="Vertical">
             <RichTextBlock Padding="16,8" IsTextSelectionEnabled="False">
                 <Paragraph>
+                    <Span>
+                        <InlineUIContainer>
+                            <HyperlinkButton NavigateUri="https://github.com/aliostad/CacheCow" Style="{ThemeResource CreditHyperlinkButtonStyle}">CacheCow</HyperlinkButton>
+                        </InlineUIContainer>
+                    </Span>
+                    <Span>
+                        <LineBreak />
+                        The MIT License (MIT)<LineBreak />
+                        <LineBreak />
+                        Copyright (C) 2013 Ali Kheyrollahi<LineBreak />
+                        <LineBreak />
+                        Permission is hereby granted, free of charge, to any person obtaining a copy<LineBreak />
+                        of this software and associated documentation files (the &quot;Software&quot;), to deal<LineBreak />
+                        in the Software without restriction, including without limitation the rights<LineBreak />
+                        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell<LineBreak />
+                        copies of the Software, and to permit persons to whom the Software is<LineBreak />
+                        furnished to do so, subject to the following conditions:<LineBreak />
+                        <LineBreak />
+                        The above copyright notice and this permission notice shall be included in all<LineBreak />
+                        copies or substantial portions of the Software.<LineBreak />
+                        <LineBreak />
+                        THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR<LineBreak />
+                        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,<LineBreak />
+                        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE<LineBreak />
+                        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER<LineBreak />
+                        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,<LineBreak />
+                        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE<LineBreak />
+                        SOFTWARE.</Span>
+                    <LineBreak />
+                    <LineBreak />
                     <Span>
                         <InlineUIContainer>
                             <HyperlinkButton NavigateUri="https://github.com/Microsoft/UWPCommunityToolkit" Style="{ThemeResource CreditHyperlinkButtonStyle}">Microsoft UWP Community Toolkit</HyperlinkButton>
