--- a/UnitTestProject/UnitTestApp.xaml
+++ b/UnitTestProject/UnitTestApp.xaml
@@ -2,6 +2,4 @@
     x:Class="UnitTestProject.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UnitTestProject">
-
-</Application>
+    xmlns:local="using:UnitTestProject" />
