Graphs: update dataset implementation
* Consolidate some common code
* Update view measuring

--- a/SimpleWeather.UWP/Controls/Graphs/ForecastGraphPanel.xaml
+++ b/SimpleWeather.UWP/Controls/Graphs/ForecastGraphPanel.xaml
@@ -204,12 +204,15 @@
             x:Name="LineGraphView"
             Grid.Column="1"
             Height="275"
+            HorizontalAlignment="Center"
+            HorizontalContentAlignment="Center"
             DrawDataLabels="True"
-            DrawDotLine="True"
-            DrawDotPoints="True"
+            DrawDotLine="False"
+            DrawDotPoints="False"
             DrawGraphBackground="True"
-            DrawGridLines="True"
-            DrawIconLabels="True"
+            DrawGridLines="False"
+            DrawIconLabels="False"
+            DrawSeriesLabels="False"
             FontSize="{Binding ElementName=Control, Path=FontSize, Mode=TwoWay}"
             ItemWidthChanged="GraphView_ItemWidthChanged"
             Loaded="GraphView_Loaded"
