SunPhaseView: update look
* Update arc paint
* Fill-in sun icon
* Additional style updates
* Fix arc for sunrise/sunset times with different dates

--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -549,11 +549,7 @@
                                 d:Header="Sunrise / Sunset"
                                 Header="{helpers:StringRes Name='label_sunriseset'}"
                                 Style="{ThemeResource SectionLabelStyle}">
-                                <localcontrols:SunPhasePanel
-                                    x:Name="SunPhasePanel"
-                                    Height="275"
-                                    MaxWidth="640"
-                                    Margin="0,0,0,0" />
+                                <localcontrols:SunPhaseView x:Name="SunPhaseView" />
                             </toolkitControls:HeaderedContentControl>
                         </StackPanel>
                         <StackPanel
